files/secondary-ingress.yaml
# secondary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secondary-service-ingress
  namespace: app
spec:
  rules:
    - host: backend.log
      http:
        paths:
          - path: /sec-logger
            pathType: Prefix
            backend:
              service:
                name: secondary-service
                port:
                  number: 8033
